k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: staging.chaseapp.tv
spec:
  tls:
    - hosts:
        - staging.chaseapp.tv
      secretName: web-tls-staging
  rules:
    - host: staging.chaseapp.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
